Support text parsing.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 <title>WASM Prototype</title>
+<script src="peg-0.8.0.js"></script>
 <script src="wasm.js"></script>
 <script src="main.js"></script>
 </head>
 <body>
 <h1>WASM Prototype</h1>
+<div>
+<textarea id="code" cols="80" rows="30"></textarea>
+<textarea id="ast" cols="80" rows="30" readonly="true"></textarea>
+<textarea id="generated" cols="80" rows="30" readonly="true"></textarea>
+<textarea id="terminal" cols="80" rows="30" readonly="true"></textarea>
+</div>
+<div>
+<button id="eval">Eval</button>
+</div>
 </body>
 <script>
 demo.run();
