Add LICENSE file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Interactive Wassembler</title>
-<script src="peg-0.8.0.js"></script>
+<script src="third_party/peg-0.8.0.js"></script>
 <script src="wasm.js"></script>
 <script src="main.js"></script>
 </head>
