Split ast into its own file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Interactive Wassembler</title>
 <script src="third_party/peg-0.8.0.js"></script>
+<script src="wast.js"></script>
 <script src="wasm.js"></script>
 <script src="main.js"></script>
 </head>
