--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Interactive Wassembler</title>
 <script src="third_party/peg-0.8.0.js"></script>
 <script src="wast.js"></script>
+<script src="semantic.js"></script>
 <script src="wasm.js"></script>
 <script src="main.js"></script>
 </head>
