--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <script src="wast.js"></script>
 <script src="semantic.js"></script>
 <script src="wasm.js"></script>
+<script src="backend/js.js"></script>
+<script src="backend/v8.js"></script>
 <script src="main.js"></script>
 </head>
 <body>
