--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div>
 <div>
 <span><button id="eval">Eval</button></span>
+<span><label><input id="desugar" type="checkbox" />Desugar JS</label></span>
 <span><a href="https://github.com/ncbray/wassembler">Repo</a></span>
 <span><a href="tests.html">Tests</a></span>
 </div>
