Memory operations for i8 and i16.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <ul>
 <li>The first text area is editable. Hit "Eval" to recompile.</li>
 <li>Supported types: i32, f32, f64, and void.</li>
+<li>Semi-supported types: i8 and i16 - no constants, yet.</li>
 <li>Basic arithmetic binary operators and comparisons are supported.</li>
 <li>if, while, and return are supported.</li>
 <li>memory name type; statically allocates memory.  Sorry, no arrays yet.</li>
