Change memory allocation syntax.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li>Semi-supported types: i8 and i16 - no constants, yet.</li>
 <li>Basic arithmetic binary operators and comparisons are supported.</li>
 <li>if, while, and return are supported.</li>
-<li>memory name type; statically allocates memory.  Sorry, no arrays yet.</li>
+<li>memory name #size align #alignment; statically allocates memory.</li>
 <li>loadI32(addr) and storeI32(addr, value) are memory accesses, and there are variants for other types.</li>
 <li>Prefixing a function with "export" makes it visible to JS.</li>
 <li>import name(argtypes) returntype; declares a binding to a JS function.</li>
