--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <textarea id="terminal" cols="80" rows="30" readonly="true"></textarea>
 </div>
 <div>
+<canvas id="canvas" width="256" height="256" style="background-color: #000"/>
+</div>
+<div>
 <h2>Help</h2>
 <ul>
 <li>The first text area is editable. Hit "Eval" to recompile.</li>
@@ -34,7 +37,7 @@
 <li>memory name #size align #alignment; statically allocates memory.</li>
 <li>loadI32(addr) and storeI32(addr, value) are memory accesses, and there are variants for other types.</li>
 <li>Prefixing a function with "export" makes it visible to JS.</li>
-<li>import name(argtypes) returntype; declares a binding to a JS function.</li>
+<li>import func name(argtypes) returntype; declares a binding to a JS function.</li>
 </ul>
 </div>
 </div>
