--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div>
 <div>
 <span><button id="eval">Eval</button></span>
+<span><label><input id="animate" type="checkbox" />Animate</label></span>
 <span><label><input id="show" type="checkbox" />Show Intermediate</label></span>
 <span><a href="https://github.com/ncbray/wassembler">Repo</a></span>
 <span><a href="tests.html">Tests</a></span>
