--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Interactive Wassembler</title>
+<link rel="stylesheet" type="text/css" href="wassembler.css">
 <script src="third_party/peg-0.8.0.js"></script>
 <script data-main="main" src="third_party/require.js"></script>
 </head>
