--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <span><button id="eval">Eval</button></span>
 <span><label><input id="animate" type="checkbox" />Animate</label></span>
 <span><label><input id="show" type="checkbox" />Show Intermediate</label></span>
-<span><input id="shared_memory" type="checkbox" /><label for="shared_memory">Shared Memory</label></span>
+<span><input id="shared_memory" type="checkbox" /><label for="shared_memory">Threads (work in progress)</label></span>
 <span><a href="https://github.com/ncbray/wassembler">Repo</a></span>
 <span><a href="tests.html">Tests</a></span>
 </div>
