Split drawing demo from threading demo.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <h1>Interactive Wassembler</h1>
 <div>
 <div>
+Demos: <a href="index.html?file=draw.wasm">draw.wasm</a> | <a href="index.html?file=threading.wasm">threading.wasm</a>
+</div>
+<div>
 <span><button id="eval">Eval</button></span>
 <span><label><input id="animate" type="checkbox" />Animate</label></span>
 <span><label><input id="show" type="checkbox" />Show Intermediate</label></span>
