--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Demos: <a href="index.html?file=draw.wasm">draw.wasm</a> | <a href="index.html?f
 <ul>
 <li>The first text area is editable. Hit "Eval" to recompile.</li>
 <li>Supported types: i32, f32, f64, and void.</li>
-<li>Semi-supported types: i8 and i16 - no constants, yet.</li>
+<li>Semi-supported types: i64 - wrong answers for bit values. i8 and i16 - no constants, yet.</li>
 <li>Basic arithmetic binary operators and comparisons are supported.</li>
 <li>if, while, and return are supported.</li>
 <li>memory name #size align #alignment; statically allocates memory.</li>
