--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Interactive Wassembler</h1>
 <div>
 <div>
-Demos: <a href="index.html?file=draw.wasm">draw.wasm</a> | <a href="index.html?file=threading.wasm">threading.wasm</a>
+Demos: <a href="index.html?file=draw.wasm">draw.wasm</a> | <a href="index.html?file=raytrace.wasm">raytrace.wasm</a> | <a href="index.html?file=threading.wasm">threading.wasm</a>
 </div>
 <div>
 <span><button id="eval">Eval</button></span>
